--- a/build.yaml
+++ b/build.yaml
@@ -5,3 +5,7 @@ include:
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
     artifact-name: corneish_zen_v2_left_with_studio
+  - board: corneish_zen_v2_left
+    shield: settings_reset
+    cmake-args: -DCONFIG_ZMK_DISPLAY=n
+    artifact-name: reset
